feat: add html layout from old cv

--- a/index.html
+++ b/index.html
@@ -4,10 +4,77 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CV</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Страница</h1>
-    <p>Текст</p>
+    <div class="container">
+        <header class="header">
+            <nav class="menu">
+                <ul class="menu-list">
+                    <li class="menu-item">
+                        <a href="#contacts" class="menu-link">Contacts</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#about" class="menu-link">About me</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#education" class="menu-link">Education</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#courses" class="menu-link">Courses</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#skills" class="menu-link">Skills</a>
+                    </li>  
+                    <li class="menu-item">
+                        <a href="#experience" class="menu-link">Experience</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#examples" class="menu-link">Code examples</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#languages" class="menu-link">Languages</a>
+                    </li>
+                </ul>
+            </nav>
+
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </header>
+
+        <main class="application-main">
+            <div class="layout-sidebar">
+                <section class="intro">
+                    <div class="intro-title">
+                        <h1 class="title">Regina Meriuts</h1>
+                    </div>
+                    <div class="intro-picture">
+                        <img class="picture" src="" alt="photo">
+                    </div>
+                </section>    
+                <section class="contacts" id="contacts">
+                    <h2 class="contacts-title">Contacts</h2>
+                    <ul class="contacts-list">
+                        
+                    </ul>
+                </section>
+            </div>    
+            <div class="layout-main">
+                <section class="section-content">
+
+                </section>
+            </div>
+        </main>
+
+        <footer class="footer">
+            <div class="footer__github"><a href="https://github.com/CyberPutin" class="footer__link">CyberPutin</a> &copy; 2022</div>
+            <div class="footer__rss"><a href="https://rs.school/js/" class="footer__link">Rolling Scopes School</a></div>
+        </footer>
+    </div>
+
 </body>
 </html>
